<resources>
    <string name="app_name">YUSOR</string>

    <string name="facebook_app_id">298058717735691</string>
    <string name="fb_login_protocol_scheme">fb298058717735691</string>

    <string name="app_desc">Yusor app is redirected to students in the university to enable them exchange their university books</string>

    <string name="no_internet">Internet Disabled</string>
    <string name="failed">Failed</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading ..</string>
    <string name="uploading">Uploading ..</string>
    <string name="Opps">Opps</string>
    <string name="upload">Upload</string>
    <string name="server_error">Error in Server</string>
    <string name="ok">Ok</string>
    <string name="loadedsuccess">Loaded Successfully</string>

    <string name="add_book">Add Book</string>
    <string name="go_gallery">Go to Main Page</string>
    <string name="browse_books">Browse</string>
    <string name="chat_history">Chat History</string>
    <string name="bills">Bills</string>
    <string name="myBooks">My Books</string>
    <string name="user_profile">Profile</string>
    <string name="contact">Contact Us</string>
    <string name="reports">send report</string>
    <string name="write_report">Write a Report</string>
    <string name="send">Report</string>
    <string name="logout">logout</string>


    <string name="enter_report">enter your report!</string>


    <string name="openDrawer">Navigation View Closed</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="details">Details</string>
    <string name="seller_profile">Seller</string>
    <string name="buyer_profile">buyer</string>
    <string name="date_time">Date and Time</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
    <string name="chat">Start Chat</string>

    <string name="book_name">Book Name</string>
    <string name="book_name_">Book Name :</string>
    <string name="call">call</string>
    <string name="book_status">Book Statue :</string>
    <string name="book_status_null">Book Statue is Null!</string>
    <string name="book_price">Book Price :</string>
    <string name="in_sr">in SR</string>
    <string name="price">Price</string>
    <string name="agreement">This Bill has been issued after agrrement upon the mentioned price.</string>
    <string name="hint_book_name">Enter Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="isbn_number">ISBN Number</string>
    <string name="isbn_number_">ISBN Number :</string>
    <string name="bill_Cover">ISBN Number :</string>
    <string name="enter_ISBN">Enter ISBN Number</string>
    <string name="enter_description">Enter Description</string>
    <string name="description">Description</string>
    <string name="description_">Description :</string>
    <string name="hint_enter_description">Enter Description</string>
    <string name="hint_isbn_number">Enter ISBN Number</string>
    <string name="author_name_">Author Name :</string>
    <string name="hint_author_name">Enter Author Name</string>
    <string name="bill_num">Bill Number :</string>
    <string name="approved">Approved</string>
    <string name="approval_done">Approval Done</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="profile_name">ProfileName</string>
    <string name="gender">Gender</string>
    <string name="gender_">Gender :</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hint_Faculty">Enter Your Faculty</string>
    <string name="Faculty">Faculty</string>
    <string name="Faculty_">Faculty :</string>
    <string name="Book_status">Book Status</string>
    <string name="Book_status_">Book Status :</string>
    <string name="book_availability">Book Availability :</string>
    <string name="book_availability_null">Book Availability is Null!</string>
    <string name="book_exists">available</string>
    <string name="book_not_exists">unavailable</string>
    <string name="purpose">Purpose</string>
    <string name="btn_publish">Publish</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="search">Search</string>
    <string name="hint_Book_status">Select Book Status</string>
    <string name="_new">New</string>
    <string name="Intermediate">Intermediate</string>
    <string name="not_bad">Not Bad</string>
    <string name="no_books_exist">No Books Exist!</string>
    <string name="you_no_books_exist">zero books for you on store</string>
    <string name="no_message">No Messages</string>
    <string name="new_message">New Message</string>
    <string name="Publish_year">Publish Year</string>
    <string name="Publish_year_">Publish Year :</string>
    <string name="transaction_type_">Transaction Type :</string>
    <string name="hint_Publish_year">Select Publish Year</string>
    <string name="slash">/</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_type_null">Transaction Type is Null!</string>
    <string name="hint_transaction_type">Select Transaction Type</string>
    <string name="sale">Sale</string>
    <string name="sold">sold</string>
    <string name="booked">Booked</string>
    <string name="try_again_later">Please Contact Technical support and Try again!</string>
    <string name="add_to_bills">Add To Bills</string>
    <string name="exchange">Exchange</string>
    <string name="gift">Gift</string>
    <string name="Attach_Photo">Attach Book Photo</string>
    <string name="browse">Browse</string>
    <string name="checkPrices">Check Prices</string>
    <string name="done">Done</string>
    <string name="static_price">SR 20</string>
    <string name="similar_books">Similar Books</string>
    <string name="hint_checkPrices">Enter to Check Prices</string>
    <string name="submit">Submit</string>

    <string name="bill_approve_msg">Are you sure proceeding to bill approval!</string>
    <string name="yes">Yes</string>
    <string name="dismiss">dismiss</string>


    <string name="tap2retry">Please, Press to retry!</string>
    <string name="chooser_Intent_select_or_take_picture">Post Image via</string>
    <string name="canceled">Canceled</string>

    <string name="select_spinner">Choose Your Book please!</string>

    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="email_">Email :</string>
    <string name="email_us">send email</string>
    <string name="group_email">gp1439is@gmail.com</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmed_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email_key">"@taibahu.edu.sa"</string>
    <string name="cannot_start_chat">Please, connect to internet at first!</string>


    <string name="Sign_in">Sign in</string>
    <string name="reset_pass">Reset Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="approve">Approve</string>
    <string name="approving">Approving</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>


    <string name="hint_email">Email</string>
    <string name="hint_rest_code">Reset Code</string>
    <string name="txt_enter_code">Enter Reset Code</string>
    <string name="verify_reset_code">Verify Reset Code</string>
    <string name="hint_password">Password</string>
    <string name="hint_c_password">Confirm Password</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your registered Email Id and check arrival of instructions message!</string>
    <string name="btn_reset_password">Reset Password</string>

    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="email_verify">Verify Your Email Address!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="enter_pass_1">Enter Password</string>
    <string name="enter_fname">Enter First Name</string>
    <string name="enter_lname">Enter Last Name</string>
    <string name="enter_pass_2">Enter Password Confirmation</string>
    <string name="email_sent">Email sent</string>
    <string name="password_changed">password changed</string>
    <string name="error">Error</string>
    <string name="failed_">faild, try again</string>
    <string name="code_valid">code valid</string>
    <string name="code_not_valid">code not valid</string>
    <string name="email_not_exist">email not exist</string>
    <string name="reset_instructions_sent">We have sent you instructions to reset your password!</string>
    <string name="enter_password">Enter password!</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="reset_instructions_sent_failed">failed to send to your email !</string>

    <string name="enter_message">Enter Your Message!</string>
    <string name="invalid_username">Invalid User Name!</string>
    <string name="invalid_userid">Invalid User ID!</string>
    <string name="invalid_bookname">Invalid Book Name!</string>
    <string name="invalid_bookid">Invalid Book ID!</string>
    <string name="invalid_sellerid">Invalid Seller ID!</string>

    <string name="offered_for_">Offered For :</string>
    <string name="Seller_name">Seller Name :</string>
    <string name="select_buyer_ifexist">Select Buyer if Exist</string>
    <string name="select_book_ifexist">Select Book if Exist</string>
    <string name="available_">Available in Store :</string>
    <string name="onshow">available</string>
    <string name="add_book_btn">Add Book</string>
    <string name="add_btn">Add New</string>
    <string name="next_btn">Next</string>
    <string name="order">Order</string>
    <string name="create_bill">Create Bill</string>
    <string name="back_btn">Back</string>

    <string name="error_network_timeout">Network Timeout Erro</string>

    <string name="enter_book_name">Enter Book Name</string>
    <string name="enter_desc">Enter Book Description</string>
    <string name="enter_auth_id">Enter Author Name</string>
    <string name="enter_publish_year">Enter Publish Year</string>
    <string name="type_message">Type a message ...</string>
    <string name="enter_faculty_id">Enter Faculty Name</string>
    <string name="enter_isbn_num">Enter ISBN Number</string>
    <string name="enter_image">Capture Book Photo</string>
    <string name="enter_author">Enter Author Name</string>
    <string name="null_book_id">Book ID is null!</string>
    <string name="no_book_in_gallery">No Books on gallery!</string>
    <string name="no_bills_in_gallery">No Bills for You!</string>


    <!--book status-->
    <string name="new_book">1</string>
    <string name="intermediate_book">2</string>
    <string name="not_bad_book">3</string>

    <!--purpose-->
    <string name="sale_book">1</string>
    <string name="exchange_book">2</string>
    <string name="gift_book">3</string>


    <string name="enter_price">Enter Book Price</string>

    <string name="chat_">Chat</string>
    <string name="chats">Chats</string>
    <string name="students">Students</string>

</resources>
