<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_book"
            android:checked="false"
            android:title="@string/add_book" />
        <!--android:icon="@drawable/news"-->
        <item
            android:id="@+id/browse_book"
            android:checked="false"
            android:title="@string/browse_books" />
        <item
            android:id="@+id/chat_history"
            android:checked="false"
            android:title="@string/chat_history" />
        <!--android:icon="@drawable/news"-->
        <item
            android:id="@+id/bills"
            android:checked="false"
            android:title="@string/bills" />
        <!--android:icon="@drawable/stadiums"-->
        <item
            android:id="@+id/books"
            android:checked="false"
            android:title="@string/myBooks" />
        <!--android:icon="@drawable/stadiums"-->
        <item
            android:id="@+id/user_profile"
            android:checked="false"
            android:title="@string/user_profile" />
        <!--android:icon="@drawable/groups"-->
        <item
            android:id="@+id/reports"
            android:checked="false"
            android:title="@string/reports" />
        <!--android:icon="@drawable/groups"-->
    </group>
    <View
        android:id="@+id/view_footer_post2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/yellow" />
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/logout"
            android:checked="false"
            android:title="@string/logout" />
    </group>
</menu>