<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    tools:context="mo.ed.prof.yusor.Activities.BillApprove.BookDetailActivity">
    <ImageView
        android:layout_alignParentTop="true"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:id="@+id/logo"/>
    <LinearLayout
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/book_photo"
                android:src="@color/grey"
                android:layout_width="140dp"
                android:layout_height="210dp" />
        </LinearLayout>
        <LinearLayout
            android:gravity="end"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/book_name_"
                android:src="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/book_name"/>
            <TextView
                android:id="@+id/author_name"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/author_name_"
                android:src="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/publish_year"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/Publish_year_"
                android:src="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/num_isbn"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/isbn_number_"
                android:src="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/desc"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/description_"
                android:src="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/price"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/price"
                android:src="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:gravity="end"
        android:layout_weight="4"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_line1"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/num_isbn"
            android:layout_width="match_parent"
            android:src="@color/grey"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/available_in_store"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/available_"
            android:layout_below="@+id/view_line1"
            android:src="@color/grey"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/book_status"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/Book_status_"
            android:layout_below="@+id/available_in_store"
            android:src="@color/grey"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/transaction_type"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/offered_for_"
            android:layout_below="@id/book_status"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/view_line2"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/transaction_type"
            android:layout_width="match_parent"
            android:src="@color/grey"
            android:layout_height="2dp"/>
        <TextView
            android:id="@+id/seller_name"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/Seller_name"
            android:layout_below="@id/view_line2"
            android:src="@color/grey"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/seller_email"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/email_"
            android:layout_below="@+id/seller_name"
            android:src="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/seller_gender"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/gender_"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/seller_email"
            android:src="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/seller_faculty"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/Faculty_"
            android:layout_below="@+id/seller_gender"
            android:src="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.dd.processbutton.iml.GenerateProcessButton
        android:id="@+id/create_bill"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_bill"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@color/white"
        custom:pb_colorComplete="@color/yellow"
        android:visibility="gone"
        custom:pb_colorNormal="@color/red_pressed"
        custom:pb_colorPressed="@color/red"
        custom:pb_colorProgress="@color/grey"
        android:textSize="18sp"
        custom:pb_textComplete="@string/done"
        custom:pb_textProgress="@string/approving" />
    <Button
        android:id="@+id/start_chat_btn"
        android:text="@string/chat"
        android:visibility="gone"
        android:background="@color/white"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_margin="@dimen/button_margin"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>