<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:padding="@dimen/padding_authentication"
        android:textStyle="bold"
        android:gravity="left|center_vertical"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size"
        android:text="@string/Book_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RadioGroup
        android:gravity="center_horizontal|center_vertical"
        android:id="@+id/radioBookStatusGroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <RadioButton
            android:id="@+id/Radio_new"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:text="@string/_new"
            android:checked="true" />
        <RadioButton
            android:id="@+id/Radio_intermediate"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:text="@string/Intermediate"
            android:checked="true" />
        <RadioButton
            android:id="@+id/Radio_notbad"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:text="@string/not_bad"
            android:checked="true" />
    </RadioGroup>
    <TextView
        android:padding="@dimen/padding_authentication"
        android:textStyle="bold"
        android:gravity="left|center_vertical"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size"
        android:text="@string/purpose"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RadioGroup
        android:gravity="center_horizontal|center_vertical"
        android:id="@+id/radioTransactionGroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <RadioButton
            android:id="@+id/Radio_Sale"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:text="@string/sale"
            android:checked="true" />
        <RadioButton
            android:id="@+id/Radio_exchange"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:text="@string/exchange"
            android:checked="true" />
        <RadioButton
            android:id="@+id/Radio_gift"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:text="@string/gift"
            android:checked="true" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:background="@color/yellow"
            android:textColor="@color/white"
            android:text="@string/checkPrices"
            android:layout_margin="@dimen/button_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:padding="@dimen/padding_authentication"
            android:textStyle="bold"
            android:gravity="left|center_vertical"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size"
            android:text="@string/purpose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
        <EditText
            android:textStyle="bold"
            android:gravity="left|center_vertical"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size"
            android:text="@string/purpose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/RecyclerSuggestBooks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"></LinearLayout>
        <Button
            android:background="@color/yellow"
            android:textColor="@color/white"
            android:text="@string/done"
            android:layout_margin="@dimen/button_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>